fix: add overflow visible to navbar buttons so divider pseudo-elements are not clipped

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -72,6 +72,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: visible;
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.8);
